# esp-homekit

./: .gitmodules  CMakeLists.txt  Kconfig  Makefile  Makefile.projbuild  README.md  component.mk  project_include.cmake
include/homekit/: characteristics.h  homekit.h  tlv.h  types.h
src/: accessories.c  base64.c  base64.h  bitset.c  bitset.h  constants.h  crypto.c  crypto.h  debug.c  debug.h  homekit_mdns.c  homekit_mdns.h  homekit_mdns_debug.c  homekit_mdns_debug.h  homekit_mdns_private.h  json.c  json.h  main.c  mdnsresponder.c  mdnsresponder.h  pairing.h  port.c  port.h  port_mdns.h  port_mdns_custom.c  port_mdns_idf.c  port_storage.h  port_storage_partition.c  port_storage_spiflash.c  query_params.c  query_params.h  queue.h  server.c  server.h  storage.c  storage.h  storage_spiflash.c  storage_sysparams.c  tlv.c  tlv_internal.h  (+1 more)
tools/: gen_qrcode  requirements.txt
